# tg_bot_example

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml
docker/: app.Dockerfile
docs/: ARCHITECTURE.md
migrations/: env.py
migrations/versions/: 2026_04_21_0000-0001_initial_schema.py
monitoring/grafana/dashboards/: bots_overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/prometheus/: prometheus.yml
scripts/: generate_fernet_key.py  wait_for_postgres.py
src/admin_api/: __init__.py  __main__.py  app.py
src/admin_api/api/: deps.py
src/admin_api/api/routes/: health.py  users.py
src/admin_api/schemas/: users.py
src/helpers_core/: __init__.py
src/helpers_core/cache/: __init__.py  redis.py  throttler.py
src/helpers_core/config/: __init__.py  settings.py
src/helpers_core/db/: __init__.py  base.py  session.py  types.py
src/helpers_core/domain/: __init__.py  models.py  repositories.py
src/helpers_core/http/: __init__.py  circuit_breaker.py  client.py
src/helpers_core/logging/: __init__.py  setup.py
src/helpers_core/marketplaces/: __init__.py  base.py
src/helpers_core/marketplaces/ozon/: __init__.py  client.py  errors.py  models.py
src/helpers_core/marketplaces/wildberries/: __init__.py  client.py  errors.py  models.py
src/helpers_core/messaging/: __init__.py  celery_app.py
src/helpers_core/security/: __init__.py  crypto.py
src/helpers_core/telegram/: __init__.py  bootstrap.py  subs_check.py
src/helpers_core/telegram/middlewares/: __init__.py  db_session.py  errors.py  logging.py  throttling.py
src/helpers_core/telemetry/: __init__.py  metrics.py
src/network_bot/: __init__.py  __main__.py
src/network_bot/handlers/: __init__.py  start.py
src/ozon_bot/: __init__.py  __main__.py
src/ozon_bot/handlers/: __init__.py  start.py
src/ozon_bot/keyboards/: __init__.py
src/task_planner_bot/: __init__.py  __main__.py
src/task_planner_bot/handlers/: __init__.py  start.py
src/wb_bot/: __init__.py  __main__.py
src/wb_bot/handlers/: __init__.py  start.py
src/wb_bot/keyboards/: __init__.py
src/worker/: __init__.py  __main__.py  runtime.py  tasks.py
tests/: conftest.py
tests/integration/: test_rate_limiter.py
tests/unit/: test_circuit_breaker.py  test_crypto.py  test_settings.py  test_wb_client.py
