[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "helpers-platform"
version = "0.1.0"
description = "Unified Telegram bot platform for marketplace automation (Wildberries, Ozon), networking and task planning."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "Helpers Platform Contributors" }]
keywords = ["telegram", "aiogram", "wildberries", "ozon", "marketplace", "bot", "fastapi", "celery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: AsyncIO",
    "Framework :: AioHTTP",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Typing :: Typed",
]

dependencies = [
    # Async runtime
    "uvloop>=0.19; sys_platform != 'win32'",
    "orjson>=3.10",

    # Telegram
    "aiogram>=3.10,<4",

    # HTTP
    "aiohttp>=3.9,<4",
    "tenacity>=9.0",

    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Validation & settings
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5",

    # Database
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.29",
    "alembic>=1.13",

    # Messaging / cache
    "redis[hiredis]>=5.0",
    "celery[librabbitmq]>=5.4",

    # Security
    "cryptography>=43",
    "argon2-cffi>=23.1",

    # Observability
    "structlog>=24.4",
    "prometheus-client>=0.21",

    # Misc
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "pytest-mock>=3.14",
    "aioresponses>=0.7.6",
    "freezegun>=1.5",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-redis>=4.6",
    "pre-commit>=3.8",
]

[project.scripts]
wb-bot = "wb_bot.__main__:main"
ozon-bot = "ozon_bot.__main__:main"
task-planner-bot = "task_planner_bot.__main__:main"
network-bot = "network_bot.__main__:main"
admin-api = "admin_api.__main__:main"
helpers-worker = "worker.__main__:main"
helpers-beat = "worker.__main__:beat"

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "helpers_core*",
    "wb_bot*",
    "ozon_bot*",
    "task_planner_bot*",
    "network_bot*",
    "admin_api*",
    "worker*",
]

[tool.setuptools.package-data]
"helpers_core" = ["py.typed"]

# ---------- Tooling ----------

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",         # pycodestyle + pyflakes
    "I",                   # isort
    "B",                   # bugbear
    "UP",                  # pyupgrade
    "N",                   # pep8-naming
    "S",                   # bandit (security)
    "A",                   # builtins shadowing
    "C4",                  # comprehensions
    "SIM",                 # simplify
    "TID",                 # tidy imports
    "PL",                  # pylint
    "RUF",                 # ruff-specific
]
ignore = [
    "PLR0913",   # too many arguments (DI pattern)
    "S101",      # assert used (pytest)
    "PLR2004",   # magic numbers in tests
    "PLC0415",   # conditional / platform-specific imports inside functions are fine
    "PLW0603",   # module-level singletons (get_engine / get_redis / cached cipher)
    "PLW2901",   # loop variable reassignment for trimming is fine
    "RUF002",    # unicode (em-dash, ×) in docstrings is intentional and readable
    "N818",      # CircuitBreakerOpen reads better than CircuitBreakerOpenError
    "C408",      # dict(...) with kwargs is sometimes clearer than {"a": 1}
    "UP047",     # PEP 695 generic function syntax is optional, TypeVar form is fine
    "RUF023",    # __slots__ ordering is a cosmetic preference
    "TID252",    # relative imports are not used in this project
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "PLR"]
"migrations/**" = ["E501", "N999"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "librabbitmq.*",
    "aioresponses.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
    "integration: requires running infrastructure (postgres, redis, rabbitmq)",
    "slow: takes longer than 1s",
]

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/migrations/*", "*/__main__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
